fix: update Flask application path and environment variables

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -21,7 +21,7 @@ COPY ./app /app
 # Set environment variables
 ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
-ENV FLASK_APP=backend.app
+ENV FLASK_APP=backend.app:create_app()
 ENV FLASK_ENV=production
 
 # Create non-root user
@@ -29,4 +29,4 @@ RUN useradd -m appuser && chown -R appuser:appuser /app /data /logs
 USER appuser
 
 # Run gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "backend.app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "backend.app:create_app()"]
