--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,15 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./app:/app
       - ./data:/data
       - ./logs:/logs
     environment:
       - FLASK_ENV=production
-      - FLASK_APP=backend/app.py
+      - FLASK_APP=backend.app:create_app()
       - SECRET_KEY=${SECRET_KEY:-default_dev_key}
       - DATABASE_URL=sqlite:///data/nfl_pickems.db
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - PYTHONPATH=/app
     restart: unless-stopped
 
   frontend:
@@ -25,11 +25,9 @@ services:
       dockerfile: Dockerfile.frontend
     ports:
       - "3000:3000"
-    volumes:
-      - ./app/frontend:/app
     environment:
       - NODE_ENV=production
-      - REACT_APP_API_URL=http://localhost:5000
+      - REACT_APP_API_URL=http://192.168.1.158:5000
     depends_on:
       - backend
     restart: unless-stopped
