--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,14 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./data:/data
-      - ./logs:/logs
+      - ./app/data:/app/data
+      - ./app/logs:/app/logs
+      - ./app/backups:/app/backups
     environment:
       - FLASK_ENV=production
       - FLASK_APP=app:create_app()
       - SECRET_KEY=${SECRET_KEY:-default_dev_key}
-      - DATABASE_URL=sqlite:///data/nfl_pickems.db
+      - DATABASE_URL=sqlite:////app/data/nfl_pickems.db
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - PYTHONPATH=/app/backend
     restart: unless-stopped
