fix: improve error handling and auth for leaderboard

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Application Settings
 FLASK_ENV=production
 FLASK_APP=app
-SECRET_KEY=your_secret_key_here
+SECRET_KEY=your_secure_secret_key_here
 
 # Database Settings
 DATABASE_URL=sqlite:///data/nfl_pickems.db
@@ -19,5 +19,5 @@ REMEMBER_COOKIE_HTTPONLY=True
 MAX_LOGIN_ATTEMPTS=5
 LOGIN_ATTEMPT_TIMEOUT=300  # 5 minutes in seconds
 
-# API Settings
-REACT_APP_API_URL=http://localhost:5000
+# API Configuration
+REACT_APP_API_URL=http://192.168.1.158:5000
