--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,4 +1,4 @@
-FROM node:18-alpine as build
+FROM node:18-alpine
 
 WORKDIR /app
 
@@ -9,21 +9,11 @@ COPY ./app/frontend/package*.json ./
 RUN npm cache clean --force && \
     npm install --legacy-peer-deps
 
-# Copy the rest of the application
-COPY ./app/frontend .
-
-# Build the application with explicit environment variable
-RUN GENERATE_SOURCEMAP=false npm run build
-
-# Production environment
-FROM node:18-alpine
-WORKDIR /app
-COPY --from=build /app/build ./build
-
-# Install serve
-RUN npm install -g serve
+# Install development dependencies
+RUN npm install -g npm@latest && \
+    npm install react-scripts@latest -g
 
 EXPOSE 3000
 
-# Use serve to run the built application
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Default to npm start, but can be overridden
+CMD ["npm", "start"]
