--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,15 @@ services:
       dockerfile: Dockerfile.frontend
     ports:
       - "3000:3000"
+    volumes:
+      - ./app/frontend:/app
+      - /app/node_modules
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - REACT_APP_API_URL=http://192.168.1.158:5000
+      - CHOKIDAR_USEPOLLING=true
+      - WDS_SOCKET_PORT=0
+    command: npm start
     depends_on:
       - backend
     restart: unless-stopped
