--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,9 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
-      - REACT_APP_API_URL=http://192.168.1.158:5000
+      - REACT_APP_API_URL=http://localhost:5000
       - CHOKIDAR_USEPOLLING=true
       - WDS_SOCKET_PORT=0
-    command: npm start
     depends_on:
       - backend
     restart: unless-stopped
